# collect-lite

./: .env.example  .gitignore  CLAUDE-PLANNING.md  CLAUDE.md  README.md  boot.sh  docker-compose.yml  evidence-and-design-rationale.md  project-description (1).md  system-design.md
.claude/: settings.json
backend/: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: CLAUDE.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_exports_row_count.py  0003_annotation_updated_at.py
backend/app/: CLAUDE.md  config.py  db.py  main.py
backend/app/models/: __init__.py  annotation.py  audit.py  dataset.py  export.py  project.py  quality.py  task.py  user.py
backend/app/routers/: annotations.py  consensus.py  datasets.py  exports.py  metrics.py  projects.py  reviews.py  suggestions.py  tasks.py  users.py
backend/app/schemas/: annotation.py  dataset.py  export.py  metrics.py  project.py  quality.py  task.py  user.py
backend/app/services/: assignment.py  audit.py  cohere_service.py  consensus.py  export.py  ingestion.py  metrics.py  model_suggestions.py  review.py  task_generation.py  task_templates.py  users.py
backend/app/workers/: jobs.py
backend/scripts/: seed.py
backend/tests/: CLAUDE.md  conftest.py  test_annotations.py  test_annotators.py  test_cohere_service.py  test_consensus.py  test_datasets.py  test_exports.py  test_metrics.py  test_model_suggestions.py  test_projects.py  test_relationships.py  test_reviews.py  test_seed.py  test_task_detail.py  test_tasks.py
data/: sample_relevance_tasks.jsonl  (+1 more)
(+56 files in other folders)
